# Captain

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: Captain.lua  Captain.py
setupfiles/: install-mac.sh
src/captain/: __init__.py  api.py  assemble.py  bridge.py  compare.py  config.py  engine.py  launcher.py  main.py  transcript.py
src/captain/gui/: main_window.py  script_view.py  settings_dialog.py  theme.py  transcript_view.py
tests/: test_assemble.py  test_bridge.py  test_compare.py  test_transcript.py
